[tool.poetry]
name = "graphql-python"
version = "0.1.0"
description = ""
authors = ["antiny <tranminhan.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "2.1.4"
graphene-django = "2.2.0"
django-filter = "2.0.0"
django-graphql-jwt = "0.2.1"
PyJWT = "1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
